--- a/react-app/src/components/RecipeUtils.module.css
+++ b/react-app/src/components/RecipeUtils.module.css
@@ -95,6 +95,10 @@
 .card_container
 {
     padding: 40px;
+    height: 100%;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: space-between; */
 }
 
 .item_container
